Fixed create and reset passwords. Fully tested order upload from se to odin.

--- a/Odin/Views/Shared/_ForgotPassword.cshtml
+++ b/Odin/Views/Shared/_ForgotPassword.cshtml
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <img class="bg" src="~/Content/Images/forgot_password.jpg" />
-    <img class="bg" id="gradient" src="~/Content/Images/bg_gradient_forgot_password.png" />
+    <!--<img class="bg" src="~/Content/Images/forgot_password.jpg" />
+    <img class="bg" id="gradient" src="~/Content/Images/bg_gradient_forgot_password.png" />-->
     <div class="container body-content">
         @RenderBody()
     </div>
