--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row">
-    <div class="col">
+    <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
         @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
