--- a/Odin/Views/Account/ResetPassword.cshtml
+++ b/Odin/Views/Account/ResetPassword.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row">
-    <div class="col">
+    <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
         @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
@@ -21,14 +21,14 @@
             <div id="group-blk">
                 <div class="form-group">
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => m.Password, new { @class = "form-control", @type = "password" })
                         @Html.LabelFor(m => m.Password, new { @class = "col-md-10 control-label" })
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => m.ConfirmPassword, new { @class = "form-control", @type = "password" })
                         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-10 control-label" })
                     </div>
                 </div>
@@ -46,7 +46,7 @@
     </div>
 </div>
 
-@Styles.Render("~/Styling/forgotpw")
+@Styles.Render("~/Styling/forgotpassword")
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
