--- a/Odin/Views/Mailers/CreatePassword.cshtml
+++ b/Odin/Views/Mailers/CreatePassword.cshtml
@@ -1,7 +1,5 @@
-﻿@model Odin.ViewModels.Mailers.SetNewPasswordViewModel
-@{
-    Layout = "";
-}
+﻿@model Odin.ViewModels.Mailers.CreatePasswordViewModel
+
 <!DOCTYPE html>
 
 <html>
@@ -13,32 +11,30 @@
         <div class="row">
             <div style="width: 626px; margin:auto; text-align:center; padding-top:5px; margin-top:80px; padding-bottom:12px; background-color:white; border:1px solid;" class="col mailer">
                 <div id="dwellworks" class="mailer" style="margin-top: 40px;text-align:center;display:block">
-                    <img src=@Url.Content("~/Content/Images/dwellworks_icon.png", true) style="vertical-align:middle;text-align:center;border:0">
+                    <img src="@Model.LogoUrl" style="vertical-align:middle;text-align:center;border:0">
                     <p style="border-left: 1px solid gray;margin-left:4px;top:-2px;height: 21px;position:relative;display:inline-block;line-height:1.846;">&nbsp;</p>
                     <p style="top:-3px;color:#4bad48;font-size:20px;font-family:sans-serif;line-height:1.846;display:inline-block;margin: 0 0 1em;text-align:center;letter-spacing:0.1px">Odin</p>
                 </div>
-                @using (Html.BeginForm("CreatePassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <div style="margin-top: 72px;font-size: 36px;line-height: 50px;font-family: sans-serif;" id="caption">
-                        <span>Create your</span><span id="pw" style="color: #31A4DD;"> Password</span>
-                        <div style="width: 344px;margin: auto;font-size:initial;line-height: 22px;margin-top: 14px;" class="mailer">
-                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi.</p>
-                        </div>
+                
+                <div style="margin-top: 72px;font-size: 36px;line-height: 50px;font-family: sans-serif;" id="caption">
+                    <span>Create your</span><span id="pw" style="color: #31A4DD;"> Password</span>
+                    <div style="width: 344px;margin: auto;font-size:initial;line-height: 22px;margin-top: 14px;" class="mailer">
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi.</p>
                     </div>
-                    <div id="group-blk" style="margin-top: 60px;padding-top: 0px;" class="mailer">
-                        <div style="padding-left:15px;padding-right:15px;" class="form-group">
-                            <div style="font-size: 20px;width: 100%;" class="col-md-10;">
-                                <a clicktracking="off" style="text-decoration:none;display:inline-block;margin-bottom: 0;font-weight: normal;text-align: center;vertical-align: middle;-ms-touch-action: manipulation;touch-action: manipulation;cursor: pointer;background-image: none;border: 1px solid transparent;white-space: nowrap;padding: 1px 10px;font-size: 20px;line-height: 1.42857143;border-radius: 4px;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;color: #ffffff;background-color: #4BAD48; border-color: #95a5a6;" href="http://localhost:49986/Account/ResetPassword?userID=06bb5638-796e-4fb7-8e4e-dd95d898b123&amp;code=1XWbbKPJLh3W4ckn7sMU3cYNJRVBaEPu%2B7to2TgLZY76eH0oK0K5upbqCdB3UG1H5JnECtaIcbGmIoDiKL%2F0uMuupem%2BRhnLLwjaiychPtI8FwYf7VwMzP%2FU%2Bt0mwowaOcHdvRSEJIPBqOnUa%2Bpoy9NgPsw0aTPRU6yZqjDvRNKaonFsa7xhRwYjH1MiwdiCciUT4QDwIa%2FoI%2F3CgYYdpA%3D%3D">Reset Password</a>
-                            </div>
+                </div>
+                <div id="group-blk" style="margin-top: 60px;padding-top: 0px;" class="mailer">
+                    <div style="padding-left:15px;padding-right:15px;" class="form-group">
+                        <div style="font-size: 20px;width: 100%;" class="col-md-10;">
+                            <a clicktracking="off" style="text-decoration:none;display:inline-block;margin-bottom: 0;font-weight: normal;text-align: center;vertical-align: middle;-ms-touch-action: manipulation;touch-action: manipulation;cursor: pointer;background-image: none;border: 1px solid transparent;white-space: nowrap;padding: 1px 10px;font-size: 20px;line-height: 1.42857143;border-radius: 4px;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;color: #ffffff;background-color: #4BAD48; border-color: #95a5a6;" href="@Model.CreateUrl">Reset Password</a>
+                        </div>
 
-                            <div style="margin-top: 110px;line-height: 10px;font-weight: 500;" class="col-md-10 mailer">
-                                <p>© 2017 Dwellworks, LLC. All Rights Reserved.</p>
-                                <p>Privacy Policy | Code of Conduct</p>
-                            </div>
+                        <div style="margin-top: 110px;line-height: 10px;font-weight: 500;" class="col-md-10 mailer">
+                            <p>© 2017 Dwellworks, LLC. All Rights Reserved.</p>
+                            <p>Privacy Policy | Code of Conduct</p>
                         </div>
                     </div>
-                }
+                </div>
+                
                 </div>
             </div>
         </div>
