--- a/Odin/Content/css/transferee/transferee.css
+++ b/Odin/Content/css/transferee/transferee.css
@@ -32,15 +32,19 @@ nav#transfereeSideNav {
     list-style: none;
     margin: 0 0;
     padding: 0; }
-    nav#transfereeSideNav ul.transfereeSideNav__items li {
-      padding: 2vh 10%; }
-      nav#transfereeSideNav ul.transfereeSideNav__items li img {
+    nav#transfereeSideNav ul.transfereeSideNav__items li a {
+      padding: 2vh 10%;
+      display: block;
+      height: 100%;
+      width: 100%; }
+      nav#transfereeSideNav ul.transfereeSideNav__items li a img {
         width: 1.5rem; }
-      nav#transfereeSideNav ul.transfereeSideNav__items li label {
+      nav#transfereeSideNav ul.transfereeSideNav__items li a label {
+        color: white;
         font-size: 1.5rem;
         margin-left: 0.75rem; }
-      nav#transfereeSideNav ul.transfereeSideNav__items li:hover {
-        background-color: rgba(0, 0, 0, 0.2); }
+    nav#transfereeSideNav ul.transfereeSideNav__items li:hover {
+      background-color: rgba(0, 0, 0, 0.2); }
     nav#transfereeSideNav ul.transfereeSideNav__items li.selected {
       background-color: #8E1A55; }
   @media screen and (min-width: 48rem) {
