--- a/Odin/Content/css/transferee/transferee.scss
+++ b/Odin/Content/css/transferee/transferee.scss
@@ -51,15 +51,21 @@ nav#transfereeSideNav {
         padding: 0;
 
         li {
-            padding: 2vh 10%;
+            a {
+                padding: 2vh 10%;
+                display: block;
+                height: 100%;
+                width: 100%;
 
-            img {
-                width: 1.5rem;
-            }
+                img {
+                    width: 1.5rem;
+                }
 
-            label {
-                font-size: 1.5rem;
-                margin-left: 0.75rem;
+                label {
+                    color: white;
+                    font-size: 1.5rem;
+                    margin-left: 0.75rem;
+                }
             }
 
             &:hover {
@@ -116,7 +122,6 @@ nav#transfereeSideNav {
     li {
         margin: 0 0 1rem 0;
         padding: 0;
-
 
         label {
             display: block;
