--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -15,29 +15,41 @@
             <hr class="transfereeSideNav__rule"/>
             <ul class="transfereeSideNav__items">
                 <li class="item selected" data-panel="intake">
-                    <img src="~/Content/Images/icn_intake.png" />
-                    <label>Intake</label>
+                    <a href="#intake">
+                        <img src="~/Content/Images/icn_intake.png" />
+                        <label>Intake</label>
+                    </a>
                 </li>
                 <li class="item" data-panel="details">
-                    <img src="~/Content/Images/icn_details.png" />
-                    <label>Details</label>
+                    <a href="#details">
+                        <img src="~/Content/Images/icn_details.png" />
+                        <label>Details</label>
+                    </a>
                 </li>
                 <li class="item" data-panel="housing">
-                    <img src="~/Content/Images/icn_housing.png" />
-                    <label>Housing</label>
+                    <a href="#housing">
+                        <img src="~/Content/Images/icn_housing.png"/>
+                        <label>Housing</label>
+                    </a>
                 </li>
                 <li class="item" data-panel="history">
-                    <img src="~/Content/Images/icn_history.png" />
-                    <label>History</label>
+                    <a href="#history">
+                        <img src="~/Content/Images/icn_history.png"/>
+                        <label>History</label>
+                    </a>
                 </li>
                 <hr class="transfereeSideNav__rule" />
                 <li class="item" data-panel="messages">
-                    <img src="~/Content/Images/icn_internal_messages.png" />
-                    <label>Messages</label>
+                    <a>
+                        <img src="~/Content/Images/icn_internal_messages.png"/>
+                        <label>Messages</label>
+                    </a>
                 </li>
                 <li class="item" data-panel="itinerary">
-                    <img src="~/Content/Images/icn_internal_itinerary.png" />
-                    <label>Itinerary</label>
+                    <a>
+                        <img src="~/Content/Images/icn_internal_itinerary.png"/>
+                        <label>Itinerary</label>
+                    </a>
                 </li>
             </ul>
         </nav>
