--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -212,14 +212,14 @@
                 <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
                 <img class="intake-expand-img" src="/Content/Images/expand.png" />
                 <h2 class="sectionSubHead">Family And Pets</h2>
-                <span class="sectionSave intake-edit">
-                    + Edit
-                </span>
-                <span class="sectionSave intake-cancel">
-                    x Cancel
-                </span>
             </div>
-            </div>
+            <span class="sectionSave intake-edit">
+                + Edit
+            </span>
+            <span class="sectionSave intake-cancel">
+                x Cancel
+            </span>
+        </div>
         <div class="row intake-row collapse in">
             <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 @Html.LabelFor(model => @Model.SpouseName)
@@ -236,7 +236,7 @@
         </div>
         <div class="row intake-row collapse in">
             <div class="col-sm-9 intake-col intake-col-add">
-                <span class="intake-add" data-entity-add="children">+Add Child</span>
+                <span class="intake-add sectionAdd" data-entity-add="children">+Add Child</span>
             </div>
         </div>
         @if (@Model.Children.Count() > 0)
@@ -263,7 +263,7 @@
                         @Html.HiddenFor(m => @Model.Children.ElementAt(i).Grade, new { @class = "intake-hidden" })
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
-                        <span class="intake-del">
+                        <span class="intake-del sectionDelete">
                             x Delete
                         </span>
                     </div>
@@ -280,7 +280,7 @@
         </div>
         <div class="row intake-row intake-row-add collapse in">
             <div class="col-sm-9 intake-col intake-col-add">
-                <span class="intake-add" data-entity-add="pets">+Add Pet</span>
+                <span class="intake-add sectionAdd" data-entity-add="pets">+Add Pet</span>
             </div>
         </div>
         @if (@Model.Pets.Count() > 0)
@@ -307,7 +307,7 @@
                         @Html.HiddenFor(m => @Model.Pets.ElementAt(i).Size, new { @class = "intake-hidden" })
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
-                        <span class="intake-del">
+                        <span class="intake-del sectionDelete">
                             x Delete
                         </span>
                     </div>
