Itinerary checkin - services added to the page

--- a/Odin/Content/css/forgotpassword.css
+++ b/Odin/Content/css/forgotpassword.css
@@ -1,9 +1,4 @@
-﻿#orderContainer {
-  margin-left: 18rem;
-  margin-top: 8rem;
-  width: auto; }
-
-body {
+﻿body {
   padding-top: 0px; }
   body img.bg {
     width: 100%;
