--- a/Odin/Content/css/orders.css
+++ b/Odin/Content/css/orders.css
@@ -1,9 +1,4 @@
-﻿#orderContainer {
-  margin-left: 18rem;
-  margin-top: 8rem;
-  width: auto; }
-
-body {
+﻿body {
   padding: 0px; }
   body div.container-fluid {
     padding: 0px; }
