--- a/Odin/Content/css/primaryNav.css
+++ b/Odin/Content/css/primaryNav.css
@@ -1,9 +1,4 @@
-﻿#orderContainer {
-  margin-left: 18rem;
-  margin-top: 8rem;
-  width: auto; }
-
-#primaryNav {
+﻿#primaryNav {
   position: fixed;
   z-index: 2;
   height: 5rem;
