--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -5,29 +5,29 @@
 
     <h2 class="sectionSubHead">File Details</h2>
     <ul class="row sectionList">
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Manager:</label>
             <p>@Model.ProgramManager.FullName</p>
         </li>
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Manager Email:</label>
             <p>@Model.ProgramManager.Email</p>
         </li>
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Manager #:</label>
             <p> @Model.PhoneNumberDisplay</p>
         </li>
 
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>SE Number:</label>
             <p>@Model.SeContactUidDisplay</p>
         </li>
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Client Number:</label>
             <p>@Model.ClientFileNumberDisplay</p>
         </li>
         <!-- this is a hack, remove this column-->
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label></label>
             <p>&nbsp;</p>
         </li>
@@ -35,28 +35,28 @@
     <hr>
     <h2 class="sectionSubHead">Important Dates</h2>
     <ul class="row sectionList">
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Familiarization Trip</label>
             <p>@Model.PreTripDateDisplay</p>
         </li>
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Work Start Date:</label>
             <p>@Model.WorkStartDateDisplay</p>
         </li>
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Temp Housing:</label>
             <p>@Model.TempHousingDays</p>
         </li>
 
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Final Arrival:</label>
             <p>@Model.FinalArrivalDateDisplay</p>
         </li>
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Home Finding Date:</label>
             <p>@Model.HomeFindingDateDisplay</p>
         </li>
-        <li class="col-sm-2">
+        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Temp Housing Last Day:</label>
             <p>@Model.TempHousingEndDateDisplay</p>
         </li>
@@ -66,28 +66,28 @@
     {
         <h2 class="sectionSubHead">Housing Details</h2>
         <ul class="row sectionList">
-            <li class="col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>Monthly Budget:</label>
                 <p>@Model.HousingBudgetDisplay</p>
             </li>
-            <li class="col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>Housing:</label>
                 <p>@Model.HousingTypeDisplay</p>
             </li>
-            <li class="col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>School District:</label>
                 <p>@Model.SchoolDistrictDisplay </p>
             </li>
 
-            <li class="col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>BD/BA:</label>
                 <p>@Model.NumberOfBedroomsDisplay/@Model.NumberOfBathroomsDisplay</p>
             </li>
-            <li class="col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>Sq.Ft:</label>
                 <p>@Model.SquareFootageDisplay</p>
             </li>
-            <li class="col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>Rent or Own:</label>
                 <p>@Model.HomeFinding.OwnershipType</p>
             </li>
@@ -105,19 +105,19 @@
         <p class="sectionInstruction">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</p>
 
         <ul class="row sectionList" id="scheduledServices">
-            <li class="col-xs-12 col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <h2 class="sectionSubHead">Service:</h2>
             </li>
-            <li class="col-xs-12 col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <h2 class="sectionSubHead">Scheduled Date:</h2>
             </li>
-            <li class="col-xs-12 col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <h2 class="sectionSubHead">Time:</h2>
             </li>
-            <li class="col-xs-12 col-sm-2">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <h2 class="sectionSubHead">Completed Date:</h2>
             </li>
-            <li class="col-xs-12 col-sm-4">
+            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <h2 class="sectionSubHead">Notes:</h2>
             </li>
         </ul>
@@ -127,20 +127,20 @@
                 if (Model.Services.ElementAt(i).Selected)
                 {
                     <ul class="row sectionList details-row" data-entity-id="@Model.Services.ElementAt(i).Id" data-entity-collection="services">
-                        <li class="service-col col-xs-12 col-sm-2 scheduledServiceTitle">
+                        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 scheduledServiceTitle">
                             @Model.Services.ElementAt(i).Name
                         </li>
-                        <li class="service-col col-xs-12 col-sm-2">
+                        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                             @Html.DatePicker("date", "ScheduledDate", Model.Services.ElementAt(i).ScheduledDateDisplay)
                         </li>
-                        <li class="service-col col-xs-12 col-sm-2">
+                        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                             @Html.DatePicker("time", "ScheduledTime", Model.Services.ElementAt(i).ScheduledTimeDisplay)
-                            <div class="text-danger" style="display:none;" data-entity-id="@Model.Services.ElementAt(i).Id" data-valmsg-replace="true"><div for="ScheduledTime">Schedule time is required.</div></div>
+                            <div class="text-danger" style="display:none;" data-entity-id="@Model.Services.ElementAt(i).Id" data-valmsg-replace="true" />
                         </li>
-                        <li class="service-col col-xs-12 col-sm-2">
+                        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                             @Html.DatePicker("date", "CompletedDate", Model.Services.ElementAt(i).CompletedDateDisplay)
                         </li>
-                        <li class="col-xs-12 col-sm-4">
+                        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                             <p>@Model.Services.ElementAt(i).Notes</p>
                         </li>
                     </ul>
