--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -3,7 +3,7 @@
 <div class="container-fluid" id="intake" data-order-id="@Model.Id">
     <h1 class="sectionTitle">Intake</h1>
     <p class="sectionInstruction">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</p>
-    <div class="intake-block">
+    <div class="intake-block expanded">
         <div class="intake-header">
             <div class="intake-collapse">
                 <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
@@ -27,7 +27,7 @@
         </ul>
     </div>
     <hr/>
-    <div class="intake-block" data-block="rmc">
+    <div class="intake-block expanded" data-block="rmc">
         <div class="intake-header"> 
             <div  class="intake-collapse">
                 <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
@@ -51,7 +51,7 @@
         </ul>
     </div>
     <hr />
-    <div class="intake-block" data-block="destination">
+    <div class="intake-block expanded" data-block="destination">
         <div class="intake-header">
             <div class="intake-collapse">
                 <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
@@ -87,7 +87,7 @@
         </ul>
     </div>
     <hr/>
-    <div class="intake-block" data-block="origin">
+    <div class="intake-block expanded" data-block="origin">
         <div class="intake-header">
             <div class="intake-collapse">
                 <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
