--- a/Odin/Content/css/login.css
+++ b/Odin/Content/css/login.css
@@ -1,9 +1,4 @@
-﻿#orderContainer {
-  margin-left: 18rem;
-  margin-top: 8rem;
-  width: auto; }
-
-body {
+﻿body {
   padding-top: 0px; }
 
 div.container.body-content {
