--- a/Odin/Content/css/transferee/itinerary.scss
+++ b/Odin/Content/css/transferee/itinerary.scss
@@ -1,5 +1,65 @@
 ﻿@import "../shared/_definitions.scss";
 
 
+
 div#itinerary {
+
+    .event-item {
+        margin-top: 4rem;
+        margin-bottom: 2rem;
+    }
+
+
+    p {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+        margin: 0 0 0 0;
+    }
+
+    .dayTitle {
+        display: flex;
+        align-content: center;
+        justify-content: flex-start;
+
+        .dayNumber {
+            font-size: 4rem;
+            font-weight: 700;
+            color: $DW_Blue;
+            margin: 0 0 0 0;
+        }
+
+        .dayText {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            margin-left: 10px;
+        }
+
+        .dayName {
+            color: #6c6e70;
+            font-weight: 400;
+        }
+
+        .mmyyyy {
+            color: #858585;
+            font-weight: 300;
+        }
+    }
+
+
+    .eventNote {
+        font-size: 2rem;
+        color: #858585;
+        font-weight: 400;
+        margin-left: 10px;
+    }
+
+    .eventTime {
+        font-size: 2rem;
+        color: #858585;
+        font-weight: 400;
+        margin-left: 0px;
+        color: $DW_Green;
+    }
 }
